# test-cmake-vcpkg

./: CMakeLists.txt  CMakePresets.json  foo.cxx  public.h  vcpkg.json
.github/workflows/: ci.yaml
